## GTK ADI Library Test
## Process this file with automake to produce Makefile.in
## Copyright (C) 2003 - 2005, Leonid Zolotarev <leonid.zolotarev@gmail.com>
##
## Licensed under the terms of the BSD license, see file COPYING
## for details.
##
## $Id$
##

SUBDIRS = src data

EXTRA_DIST = \
	autogen.sh
