
libgtkadiconview_la_CPPFLAGS = \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/gtkadiview \
	$(GTK_CFLAGS) \
	$(HILDON_CFLAGS)

AM_CFLAGS = \
	-Wall \
	-g

noinst_LTLIBRARIES = libgtkadiconview.la

libgtkadiconview_la_SOURCES = \
	gtkadiconview.c

noinst_HEADERS = \
	gtkadiconview.h

libgtkadiconview_la_LDFLAGS = \
	$(GTK_LIBS) \
	$(HILDON_LIBS)
