
libgtkadiview_la_CPPFLAGS = \
	-I$(top_srcdir)/include \
	$(GTK_CFLAGS)

AM_CFLAGS = \
	-Wall \
	-g

noinst_LTLIBRARIES = libgtkadiview.la

libgtkadiview_la_SOURCES = \
	gtkadititle.c \
	gtkadicolor.c \
	gtkadiview.c

noinst_HEADERS = \
	gtkadititle.h \
	gtkadicolor.h \
	gtkadiview.h

libgtkadiview_la_LDFLAGS = \
	$(GTK_LIBS)
